#1566 Replaced Files.readstring method which works in java 11